# talkingAvatar

./: .gitignore  README.md  VISUAL_UPGRADE_PLAN.md  run_both.bat  toRun.txt
serverHere/: .gitignore  README.md  mcp_servers 2.json  mcp_servers.json  mcp_shell_server.py  model_dict.json  pyproject.toml  requirements.txt  run_server.py
serverHere/frontend/: index.html
serverHere/live2dModels/johan/: sub_mahuyufather_t03.model3.json
serverHere/live2dModels/johan/motions/: face_angry_01.motion3.json  face_closeeye_01.motion3.json  face_confuse_02.motion3.json  face_lookdown_01.motion3.json  face_sad_01.motion3.json  face_seriously_01.motion3.json  face_smile_01.motion3.json  face_smile_03.motion3.json  face_surprise_01.motion3.json  m-adult-shakehead03.motion3.json  m-afather-nod01.motion3.json  m-normal-nod04.motion3.json  m-normal-shakehead04.motion3.json  s-common-angry02.motion3.json  s-common-forward01.motion3.json  s-common-pose01.motion3.json  s-common-sad01.motion3.json  s-common-tilthead01.motion3.json  s-common-tilthead02.motion3.json
serverHere/src/open_llm_vtuber/: routes.py  server.py  service_context.py  websocket_handler.py
serverHere/src/open_llm_vtuber/config_manager/: agent.py
serverHere/src/open_llm_vtuber/conversations/: conversation_handler.py  conversation_utils.py  single_conversation.py  tts_manager.py
serverHere/src/open_llm_vtuber/mcpp/: mcp_client.py  tool_adapter.py  tool_executor.py
serverHere/upgrade_codes/: config_sync.py
serverHere/upgrade_codes/upgrade_core/: constants.py  language.py  upgrade_utils.py
(+139 files in other folders)
